--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <div class="col-lg-8 m-auto text-center col-sm-12 col-md-12">
             <div class="banner-content content-padding">
               <h5 class="subtitle">A creative agency</h5>
-              <h1 class="banner-title">Hello</h1>
+              <h1 class="banner-title">Hello This is Greg</h1>
               <p>We provide marketing services to startups and small businesses to looking for a partner for their digital media, design-area.We are a a startup company to be commited to work and time management.</p>
 
               <a href="contact.html" class="btn btn-white btn-circled">lets start</a>
