--- a/about.html
+++ b/about.html
@@ -149,7 +149,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <div class="footer-copy">
-          Copyright &copy; 2021, Designed &amp; Developed by <a href="https://themefisher.com/">Themefisher</a>
+          Copyright &copy; Greg Demary 2022
         </div>
       </div>
     </div>
