--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <!--  ABOUT AREA START  -->
 <section id="intro">
   <div class="container">
-    <div class="row mb-5">
+    <div class="row mb-1">
       <div class="col-lg-5 d-none d-lg-block col-sm-12 align-self-end">
         <div class="intro-img">
           <img src="images/banner/why-choose.png" alt="intro-img" class="img-fluid">
@@ -138,7 +138,7 @@
     <div class="row justify-content-center">
       <div class="col-lg-8 text-center">
         <div class="mb-5">
-          <h3 class="mb-2">Testimonials</h3>
+          <h3 class="mb-3">Testimonials</h3>
           <p>Rated 5.0 Stars on <a href="https://www.google.com/search?q=greg+demary+realtor&ei=GAVTY8X0ILTZ5NoPpd2ssA0&ved=0ahUKEwjF4IbEmPL6AhW0LFkFHaUuC9YQ4dUDCBA&uact=5&oq=greg+demary+realtor&gs_lcp=Cgxnd3Mtd2l6LXNlcnAQAzICCCZKBAhBGAFKBAhGGABQkQRYkQRgzgdoAXAAeACAAVGIAVGSAQExmAEAoAEBwAEB&sclient=gws-wiz-serp">Google</a></p>
         </div>
       </div>
@@ -237,8 +237,8 @@
       <div class="col-lg-3 col-md-4 col-sm-12">
         <div class="footer-widget footer-text">
           <h4>Contact</h4>
-          <p class="mail"><span>Mail:</span> gdemary@cedar-one.com</p>
-          <p><span>Phone :</span>+202-277-3894</p>
+          <p class="mail"><span>Mail:</span>  <a href="mailto:gdemary@cedar-one.com">gdemary@cedar-one.com</a></p>
+          <p><span>Phone: </span>+202-277-3894</p>
           <p><span>Location:</span> 143 Canton Rd, Wintersville, OH 43953</p>
         </div>
       </div>
@@ -246,7 +246,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <div class="footer-copy">
-          Copyright &copy; 2022
+          Copyright &copy; Greg Demary 2022
         </div>
       </div>
     </div>
