--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,6 @@
       <div class="col-lg-8 m-auto text-center col-sm-12 col-md-12">
         <div class="banner-content content-padding">
           <h1 class="text-white">Let's Connect</h1>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde, perferendis?</p>
         </div>
       </div>
     </div>
@@ -131,13 +130,13 @@
 
       <div class="col-lg-5 pl-4 mt-4 mt-lg-0">
         <h4>Office Address</h4>
-        <p class="mb-3">John lake park 9/12 street park London</p>
+        <p class="mb-3">143 Canton Rd, Wintersville, OH 43953</p>
         <h4>Contact Info</h4>
-        <p class="mb-3">+23 456 7920</p>
+        <p class="mb-3">+832-833-3705</p>
         <h4>Contact Mail</h4>
-        <p class="mb-3">support@email.com</p>
+        <p class="mb-3">gdemary@cedar-one.com</p>
         <h4>Website</h4>
-        <p>www.companyname.com</p>
+        <p>www.gregdemary.com</p>
       </div>
     </div>
   </div>
@@ -153,8 +152,8 @@
     <div class="row justify-content-around">
       <div class="col-lg-4">
         <div class="footer-widget footer-link">
-          <h4>We concern about you<br> to grow business rapidly.</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore ipsam hic non sunt recusandae atque unde saepe nihil earum voluptatibus aliquid optio suscipit nobis quia vel quod, iure quae.</p>
+          <h4>Buying and Selling Made Easy</h4>
+          <p>Real esate transactions can seem overwhelming, but that's why an agent is there to help you. Regardless of your situation or timeline, Greg is always happy to answer any questions you have. </p>
         </div>
       </div>
       <div class="col-lg-2 col-md-4 col-6">
@@ -162,47 +161,33 @@
           <h4>About</h4>
           <ul>
             <li><a href="about.html">About</a></li>
-            <li><a href="service.html">Service</a></li>
-            <li><a href="pricing.html">Pricing</a></li>
-            <li><a href="#!">Team</a></li>
-            <li><a href="#!">Testimonials</a></li>
-            <li><a href="blog.html">Blog</a></li>
+            <li><a href="sellers.html">Sellers</a></li>
+            <li><a href="buyers.html">Buyers</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
       </div>
 
-      <div class="col-lg-2 col-md-4 col-6">
-        <div class="footer-widget footer-link">
-          <h4>Quick Links</h4>
-          <ul>
-            <li><a href="#!">How it Works</a></li>
-            <li><a href="#!">Support</a></li>
-            <li><a href="#!">Privacy Policy</a></li>
-            <li><a href="#!">Report Bug</a></li>
-            <li><a href="#!">License</a></li>
-            <li><a href="#!">Terms & Condition</a></li>
-          </ul>
-        </div>
-      </div>
       <div class="col-lg-3 col-md-4 col-sm-12">
         <div class="footer-widget footer-text">
-          <h4>Our location</h4>
-          <p class="mail"><span>Mail:</span> promdise@gmail.com</p>
-          <p><span>Phone :</span>+202-277-3894</p>
-          <p><span>Location:</span> 455 West Orchard Street Kings Mountain, NC 28086,NOC building</p>
+          <h4>Contact</h4>
+          <p class="mail"><span>Mail:</span>  <a href="mailto:gdemary@cedar-one.com">gdemary@cedar-one.com</a></p>
+          <p><span>Phone: </span>+832-833-3705</p>
+          <p><span>Location:</span> 143 Canton Rd, Wintersville, OH 43953</p>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-lg-12 text-center">
         <div class="footer-copy">
-          Copyright &copy; 2021, Designed &amp; Developed by <a href="https://themefisher.com/">Themefisher</a>
+          Copyright &copy; Greg Demary 2023
         </div>
       </div>
     </div>
   </div>
 </section>
 <!--  FOOTER AREA END  -->
+
 
 
     <!--
