--- a/sellers.html
+++ b/sellers.html
@@ -77,7 +77,7 @@
     <div class="row justify-content-center">
       <div class="col-lg-8 m-auto text-center col-sm-12 col-md-12">
         <div class="banner-content content-padding">
-          <h1 class="text-white">Info for Sellers</h1>
+          <h1 class="text-white">Info For Sellers</h1>
           <p></p>
         </div>
       </div>
@@ -158,163 +158,16 @@
       <div class="col-lg-5 col-sm-12 col-md-6 mb-5 mb-lg-0">
         <img src="images/bg/2-min.jpg" alt="feature bg" class="img-fluid">
       </div>
-
       <div class="col-lg-7 pl-4">
-        <div class="mb-5">
           <h3 class="mb-4">Find Out Your Home's Worth</h3>
-          <p>We craft beautiful website layout from scratch.You need not to worry about site design and other technial issue.We provide these attractive service as a bonus.Let's have atalk together for your next project.</p>
-        </div>
-
-        <ul class="about-list">
-          <li>
-            <h5 class="mb-2"><i class="icofont icofont-check-circled"></i>Responsive site</h5>
-            <p>Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
-          </li>
-
-          <li>
-            <h5 class="mb-2"><i class="icofont icofont-check-circled"> </i> Latest bootstrap 4</h5>
-            <p>Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
-          </li>
-
-          <li>
-            <h5 class="mb-2"><i class="icofont icofont-check-circled"> </i>Modern design</h5>
-            <p>Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
-          </li>
-          <li>
-            <h5 class="mb-2"> <i class="icofont icofont-check-circled"> </i>Working contact form</h5>
-            <p>Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</section>
-<!--  SERVICE AREA END  -->
-<!--  SERVICE PARTNER START  -->
-<section id="service-head" class="service-style-two">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-lg-8 col-sm-12 m-auto">
-        <div class="heading text-white text-center">
-          <h4 class="section-title text-white">Full stack digital marketing solution</h4>
-          <p>We’re full service which means we’ve got you covered on design & content right through to digital. You’ll form a lasting relationship with us.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!--  SERVICE PARTNER END  -->
-<!--  SERVICE AREA START  -->
-<section id="service">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-4 col-sm-6 col-md-6">
-        <div class="service-box">
-          <div class="service-img-icon">
-            <img src="images/icon/007-digital-marketing-3.png" alt="service-icon" class="img-fluid">
-          </div>
-          <div class="service-inner">
-            <h4>Video Marketing</h4>
-            <p>Reach a huge area of users and get a publicty of your product and service ,<span>video marketing</span>
-              solution.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-sm-6 col-md-6">
-        <div class="service-box ">
-          <div class="service-img-icon">
-            <img src="images/icon/008-digital-marketing-2.png" alt="service-icon" class="img-fluid">
-          </div>
-          <div class="service-inner">
-            <h4>Email Marketing</h4>
-            <p>Email Marketing is a great solution to reach a <span>high range of customers</span> eagrerly waiting to
-              get a service.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-sm-6 col-md-6">
-        <div class="service-box">
-          <div class="service-img-icon">
-            <img src="images/icon/003-task.png" alt="service-icon" class="img-fluid">
-          </div>
-          <div class="service-inner">
-            <h4>SEO optimization</h4>
-            <p>we provide wide range of<span> seo service</span> to make your site at top to reach your target customers
-              provided.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-4 col-sm-6 col-md-6">
-        <div class="service-box">
-          <div class="service-img-icon">
-            <img src="images/icon/010-digital-marketing.png" alt="service-icon" class="img-fluid">
-          </div>
-          <div class="service-inner">
-            <h4>Custom Website</h4>
-            <p>We provide <span>custom website</span> for any small and large company web based service in large compact
-              package.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-sm-6 col-md-6">
-        <div class="service-box">
-          <div class="service-img-icon">
-            <img src="images/icon/006-analytics.png" alt="service-icon" class="img-fluid">
-          </div>
-          <div class="service-inner">
-            <h4>Content Growth</h4>
-            <p>Content is king,Having a blog site and want to <span>build content</span> make a platform of earning too
-              we assist you.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-sm-6 col-md-6">
-        <div class="service-box">
-          <div class="service-img-icon">
-            <img src="images/icon/004-hiring.png" alt="service-icon" class="img-fluid">
-          </div>
-          <div class="service-inner">
-            <h4>Link Building </h4>
-            <p>Want to grow your <span>potential visitor</span> your site to make it more effective and succesful
-              business .</p>
-          </div>
+          <p></p>
+          <p>As a professional realtor, I offer my clients a free Comparative Market Analysis (CMA) that will help them determine the current market value of their home. With this valuable information, sellers can make informed decisions about whether or not to sell their homes and when to put it on the market. </p><p> Even if you're not planning to sell right away, it's always a good idea to have a conversation with a realtor about your long-term goals. By planning ahead, you'll be better equipped to make decisions when the time is right. </p> <p> Don't wait until you're ready to put your home on the market to start planning. Contact me today to get your free CMA and let's start discussing your options!</p>
         </div>
       </div>
     </div>
   </div>
 </section>
 <!--  SERVICE AREA END  -->
-<!--  PARTNER START  -->
-<section id="clients" class="section-padding ">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-lg-8 text-center">
-        <div class="mb-5">
-          <h3 class="mb-2">Trusted by hundred over years</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, dignissimos?</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-lg-3 col-sm-6 col-md-3 text-center">
-        <img src="images/clients/client01.png" alt="partner" class="img-fluid">
-      </div>
-      <div class="col-lg-3 col-sm-6 col-md-3 text-center">
-        <img src="images/clients/client06.png" alt="partner" class="img-fluid">
-      </div>
-      <div class="col-lg-3 col-sm-6 col-md-3 text-center">
-        <img src="images/clients/client04.png" alt="partner" class="img-fluid">
-      </div>
-      <div class="col-lg-3 col-sm-6 col-md-3 text-center">
-        <img src="images/clients/client05.png" alt="partner" class="img-fluid">
-      </div>
-    </div>
-  </div>
-</section>
-<!--  PARTNER END  -->
-
 
 <!--  FOOTER AREA START  -->
 <section id="footer" class="section-padding">
@@ -322,8 +175,8 @@
     <div class="row justify-content-around">
       <div class="col-lg-4">
         <div class="footer-widget footer-link">
-          <h4>We concern about you<br> to grow business rapidly.</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore ipsam hic non sunt recusandae atque unde saepe nihil earum voluptatibus aliquid optio suscipit nobis quia vel quod, iure quae.</p>
+          <h4>Buying and Selling Made Easy</h4>
+          <p>Real esate transactions can seem overwhelming, but that's why an agent is there to help you. Regardless of your situation or timeline, Greg is always happy to answer any questions you have. </p>
         </div>
       </div>
       <div class="col-lg-2 col-md-4 col-6">
@@ -331,47 +184,33 @@
           <h4>About</h4>
           <ul>
             <li><a href="about.html">About</a></li>
-            <li><a href="service.html">Service</a></li>
-            <li><a href="pricing.html">Pricing</a></li>
-            <li><a href="#!">Team</a></li>
-            <li><a href="#!">Testimonials</a></li>
-            <li><a href="blog.html">Blog</a></li>
+            <li><a href="sellers.html">Sellers</a></li>
+            <li><a href="buyers.html">Buyers</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
       </div>
 
-      <div class="col-lg-2 col-md-4 col-6">
-        <div class="footer-widget footer-link">
-          <h4>Quick Links</h4>
-          <ul>
-            <li><a href="#!">How it Works</a></li>
-            <li><a href="#!">Support</a></li>
-            <li><a href="#!">Privacy Policy</a></li>
-            <li><a href="#!">Report Bug</a></li>
-            <li><a href="#!">License</a></li>
-            <li><a href="#!">Terms & Condition</a></li>
-          </ul>
-        </div>
-      </div>
       <div class="col-lg-3 col-md-4 col-sm-12">
         <div class="footer-widget footer-text">
-          <h4>Our location</h4>
-          <p class="mail"><span>Mail:</span> promdise@gmail.com</p>
-          <p><span>Phone :</span>+202-277-3894</p>
-          <p><span>Location:</span> 455 West Orchard Street Kings Mountain, NC 28086,NOC building</p>
+          <h4>Contact</h4>
+          <p class="mail"><span>Mail:</span>  <a href="mailto:gdemary@cedar-one.com">gdemary@cedar-one.com</a></p>
+          <p><span>Phone: </span>+832-833-3705</p>
+          <p><span>Location:</span> 143 Canton Rd, Wintersville, OH 43953</p>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-lg-12 text-center">
         <div class="footer-copy">
-          Copyright &copy; 2021, Designed &amp; Developed by <a href="https://themefisher.com/">Themefisher</a>
+          Copyright &copy; Greg Demary 2022
         </div>
       </div>
     </div>
   </div>
 </section>
 <!--  FOOTER AREA END  -->
+
 
 
 
