removed contact form

--- a/contact.html
+++ b/contact.html
@@ -85,10 +85,41 @@
 </div>
 <!--MAIN HEADER AREA END -->
 
+<!--  Contact START  -->
+<section class="section-padding">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 col-sm-12 col-md-12">
+        <div class="mb-5">
+          <h2 class="mb-2">Get in touch</h2>
+          <p>Have a project on mind,want to make an consultant. Don't hesistate to contact us.Let's have atalk
+            together.Colaborat eyour project to done quickly</p>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-7 col-sm-12">
+        <!--  Google Map START  -->
+        <div id="map" data-latitude="40.376790" data-longitude="-80.704360" data-marker="images/marker.png"></div>
+        <!--  Google Map END  -->
+      </div>
 
-<!--  Google Map START  -->
-<div id="map" data-latitude="40.376790" data-longitude="-80.704360" data-marker="images/marker.png"></div>
-<!--  Google Map END  -->
+      <div class="col-lg-5 pl-4 mt-4 mt-lg-0">
+        <h4>Office Address</h4>
+        <p class="mb-3">143 Canton Rd, Wintersville, OH 43953</p>
+        <h4>Contact Info</h4>
+        <p class="mb-3">+832-833-3705</p>
+        <h4>Contact Mail</h4>
+        <p class="mb-3">gdemary@cedar-one.com</p>
+        <h4>Website</h4>
+        <p>www.gregdemary.com</p>
+      </div>
+    </div>
+  </div>
+</section>
+<!--  CONTACT END  -->
+
+
 <!--  FOOTER AREA START  -->
 <section id="footer" class="section-padding">
   <div class="container">
