Backing Up Personal Website

--- a/contact.html
+++ b/contact.html
@@ -92,8 +92,7 @@
       <div class="col-lg-6 col-sm-12 col-md-12">
         <div class="mb-5">
           <h2 class="mb-2">Get in touch</h2>
-          <p>Have a project on mind,want to make an consultant. Don't hesistate to contact us.Let's have atalk
-            together.Colaborat eyour project to done quickly</p>
+          <p>Whether you want a free CMA or consultation, or just have a few questions, don't hesitate to reach out to us for all your real estate needs.</p>
         </div>
       </div>
     </div>
@@ -107,9 +106,9 @@
       <div class="col-lg-5 pl-4 mt-4 mt-lg-0">
         <h4>Office Address</h4>
         <p class="mb-3">143 Canton Rd, Wintersville, OH 43953</p>
-        <h4>Contact Info</h4>
+        <h4>Phone</h4>
         <p class="mb-3">+832-833-3705</p>
-        <h4>Contact Mail</h4>
+        <h4>E-Mail</h4>
         <p class="mb-3">gdemary@cedar-one.com</p>
         <h4>Website</h4>
         <p>www.gregdemary.com</p>
