updates to about list

--- a/index.html
+++ b/index.html
@@ -107,28 +107,38 @@
           <h3>Your guide to real estate in Steubenville <br> and the surrounding Ohio Valley</h3>
           <p>Whether you’re buying or selling, you should have the best service. Greg takes pride in going above and beyond for his clients to make the transition of moving seamless. Just starting out? Request a free guide for buyers and sellers!</p>
 
-          <ul class="about-list">
-            <li>
-              <i class="far fa-check-circle"> </i> Knowledge of the local real estate market
-            </li>
-            <li>
-              <i class="far fa-check-circle"> </i>Effective negotiating skills &emsp; &emsp; &emsp; &emsp;
-            </li>
-            <li>
-              <i class="far fa-check-circle"> </i> Familiarity with local neighborhoods and communities
-            </li>
-            <li>
-              <i class="far fa-check-circle"> </i> Committed to honesty and transparency
-            </li>
-            <li>
-              <i class="far fa-check-circle"> </i>Resources for finding the right inspectors, lenders, movers, and other services
-            </li>
-            <li>
-              <i class="far fa-check-circle"> </i> Punctual and informative communication
-            </li>
-          </ul>
+          <div class="container">
+            <ul class="about-list">
+              <div class="row">
+                  <li>
+                    <i class="far fa-check-circle"> </i> Knowledge of the local real estate market
+                  </li>
+                  <li>
+                    <i class="far fa-check-circle"> </i>Effective negotiating skills &emsp; &emsp; &emsp; &emsp;
+                  </li>
+              </div>
+              <div class="row">
+                  <li>
+                    <i class="far fa-check-circle"> </i> Familiarity with local neighborhoods and communities
+                  </li>
+                  <li>
+                    <i class="far fa-check-circle"> </i> Committed to honesty and transparency
+                  </li>
+              </div>
+              <div class="row">
+                  <li>
+                    <i class="far fa-check-circle"> </i>Resources for finding the right inspectors, lenders, movers, and other services
+                  </li>
+                  <li>
+                    <i class="far fa-check-circle"> </i> Punctual and informative communication
+                  </li>
+              </div>
+            </ul>
+          </div>
+
         </div>
       </div>
+
     </div>
   </div>
 </section>
