fixed carousel controls

--- a/index.html
+++ b/index.html
@@ -150,26 +150,30 @@
       <div class="col-lg-8 text-center">
         <div class="mb-5">
           <h3 class="mb-3">Testimonials</h3>
-          <p>Rated 5.0 Stars on <a href="https://www.google.com/search?q=greg+demary+realtor&ei=GAVTY8X0ILTZ5NoPpd2ssA0&ved=0ahUKEwjF4IbEmPL6AhW0LFkFHaUuC9YQ4dUDCBA&uact=5&oq=greg+demary+realtor&gs_lcp=Cgxnd3Mtd2l6LXNlcnAQAzICCCZKBAhBGAFKBAhGGABQkQRYkQRgzgdoAXAAeACAAVGIAVGSAQExmAEAoAEBwAEB&sclient=gws-wiz-serp">Google</a></p>
+          <p>Rated 5.0 Stars on <a
+              href="https://www.google.com/search?q=greg+demary+realtor&ei=GAVTY8X0ILTZ5NoPpd2ssA0&ved=0ahUKEwjF4IbEmPL6AhW0LFkFHaUuC9YQ4dUDCBA&uact=5&oq=greg+demary+realtor&gs_lcp=Cgxnd3Mtd2l6LXNlcnAQAzICCCZKBAhBGAFKBAhGGABQkQRYkQRgzgdoAXAAeACAAVGIAVGSAQExmAEAoAEBwAEB&sclient=gws-wiz-serp">Google</a>
+          </p>
         </div>
       </div>
     </div>
-
     <div class="row">
       <div class="col-lg-8 m-auto col-sm-12 col-md-12">
-        <div class="carousel slide" id="test-carousel2">
+        <div class="carousel slide" data-ride="false" data-interval="false" id="test-carousel2">
           <div class="carousel-inner">
             <ol class="carousel-indicators">
               <li data-target="#test-carousel2" data-slide-to="0" class="active"></li>
               <li data-target="#test-carousel2" data-slide-to="1"></li>
               <li data-target="#test-carousel2" data-slide-to="2"></li>
             </ol>
-
             <div class="carousel-item active">
               <div class="row">
                 <div class="col-lg-12 col-sm-12">
                   <div class="testimonial-content style-2">
-                    <p><i class="icofont icofont-quote-left"></i>There is no one that I would recommend more than Greg Demary to help with finding and purchasing a home in Ohio. Professionally, Greg was responsive, punctual, accurate, and informative. Personally, Greg was kind, understanding, patient, and helpful. I have even used him as a directory for plumbing, contracting, and other local services.<i class="icofont icofont-quote-right"></i></p>
+                    <p><i class="icofont icofont-quote-left"></i>There is no one that I would recommend more than Greg
+                      Demary to help with finding and purchasing a home in Ohio. Professionally, Greg was responsive,
+                      punctual, accurate, and informative. Personally, Greg was kind, understanding, patient, and
+                      helpful. I have even used him as a directory for plumbing, contracting, and other local
+                      services.<i class="icofont icofont-quote-right"></i></p>
                     <div class="author-text">
                       <h5>- John M.</h5>
                     </div>
@@ -177,11 +181,15 @@
                 </div>
               </div>
             </div>
-            <div class="carousel-item ">
+            <div class="carousel-item">
               <div class="row">
                 <div class="col-lg-12 col-sm-12">
                   <div class="testimonial-content style-2">
-                    <p><i class="icofont icofont-quote-left"></i>Greg functioned as our eyes and ears in Steubenville, as we were buying from out of state. He really did all the work, filming video tours of multiple homes; before finding the home we wanted in the neighborhood we wanted to be in. Greg's knowledge of the Steubenville area, and his calm and patience, took a lot of the stress out of a long distance home search. <i class="icofont icofont-quote-right"></i></p>
+                    <p><i class="icofont icofont-quote-left"></i>Greg functioned as our eyes and ears in Steubenville,
+                      as we were buying from out of state. He really did all the work, filming video tours of multiple
+                      homes; before finding the home we wanted in the neighborhood we wanted to be in. Greg's knowledge
+                      of the Steubenville area, and his calm and patience, took a lot of the stress out of a long
+                      distance home search. <i class="icofont icofont-quote-right"></i></p>
                     <div class="author-text">
                       <h5>Cheryl S.</h5>
                     </div>
@@ -189,13 +197,14 @@
                 </div>
               </div>
             </div>
-            <!--  ITEM END  -->
-
-            <div class="carousel-item ">
+            <div class="carousel-item">
               <div class="row">
                 <div class="col-lg-12 col-sm-12">
                   <div class="testimonial-content style-2">
-                    <p><i class="icofont icofont-quote-left"></i>Greg was amazing to work with and helped make our wildest dreams come true. Easy to work with and thoughtful with all his insight. I highly recommend him as a real estate agent here in the Ohio Valley!!<i class="icofont icofont-quote-right"></i></p>
+                    <p><i class="icofont icofont-quote-left"></i>Greg was amazing to work with and helped make our
+                      wildest dreams come true. Easy to work with and thoughtful with all his insight. I highly
+                      recommend him as a real estate agent here in the Ohio Valley!!<i
+                        class="icofont icofont-quote-right"></i></p>
                     <div class="author-text">
                       <h5>Justin S.</h5>
                     </div>
@@ -203,19 +212,30 @@
                 </div>
               </div>
             </div>
-            <!--  ITEM END  -->
           </div>
+          <a class="carousel-control-prev" href="#test-carousel2" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#test-carousel2" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
       </div>
     </div>
   </div>
+
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8 text-center">
         <div class="mb-5">
           <div class="row justify-content-center">
-            <div class="col-lg-8 text-center"
-              <p> <a href="https://www.google.com/search?q=greg+demary+realtor&oq=greg&aqs=chrome.2.69i60j69i57j69i59l3j69i60l3.2203j0j7&gs_lcrp=EgZjaHJvbWUqBggCEEUYOzIGCAAQRRg8MgYIARBFGDkyBggCEEUYOzIGCAMQRRg7MgYIBBBFGDsyBggFEEUYPDIGCAYQRRg8MgYIBxBFGDzSAQgyMjAzajBqN6gCALACAA&sourceid=chrome&ie=UTF-8#lrd=0x88342f667bdc701b:0x36245c2abbcde90b,1" class="mt-3 d-inline-block">Read more reviews <i class="fa fa-angle-right"></i></a> </p>
+            <div class="col-lg-8 text-center">
+              <p> <a
+                  href="https://www.google.com/search?q=greg+demary+realtor&oq=greg&aqs=chrome.2.69i60j69i57j69i59l3j69i60l3.2203j0j7&gs_lcrp=EgZjaHJvbWUqBggCEEUYOzIGCAAQRRg8MgYIARBFGDkyBggCEEUYOzIGCAMQRRg7MgYIBBBFGDsyBggFEEUYPDIGCAYQRRg8MgYIBxBFGDzSAQgyMjAzajBqN6gCALACAA&sourceid=chrome&ie=UTF-8#lrd=0x88342f667bdc701b:0x36245c2abbcde90b,1"
+                  class="mt-3 d-inline-block">Read more reviews <i class="fa fa-angle-right"></i></a> </p>
+            </div>
           </div>
         </div>
       </div>
