--- a/index.html
+++ b/index.html
@@ -33,7 +33,16 @@
   <link rel="stylesheet" href="css/style.css">
 
   <!--Favicon-->
-  <link rel="icon" href="images/favicon.png" type="image/x-icon">
+<!--   <link rel="icon" href="images/favicon.png" type="image/x-icon"> -->
+  <link rel="apple-touch-icon" sizes="76x76" href="favicon_package/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon_package/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon_package/favicon-16x16.png">
+  <link rel="manifest" href="favicon_package/site.webmanifest">
+  <link rel="mask-icon" href="favicon_package/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+
+
 
 </head><body data-spy="scroll" data-target="#mainNav">
 
