updates to carousel controls

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
               </div>
             </div>
           </div>
-          <div class="d-none d-sm-block">
+          <div class="d-none d-md-block">
             <a class="carousel-control-prev" href="#test-carousel2" role="button" data-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="sr-only">Previous</span>
