--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     </div>
     <div class="row">
       <div class="col-lg-8 m-auto col-sm-12 col-md-12">
-        <div class="carousel slide" data-ride="false" data-interval="false" id="test-carousel2">
+        <div id="test-carousel2" class="carousel slide" data-ride="false">
           <div class="carousel-inner">
             <ol class="carousel-indicators">
               <li data-target="#test-carousel2" data-slide-to="0" class="active"></li>
